# reminisce

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEV_SETUP.md  Dockerfile  Dockerfile.p2p  LICENSE  README.md  build-android.sh  config-dev.yaml.example  config-fullstack.yaml.example  dev  docker-compose-build.yml  docker-compose-dev.yml  docker-compose-netbird.yml  docker-compose.deploy.yml  docker-compose.yml  generate-ssl-certs-fullstack.sh  generate_install.sh  install.sh  nginx-dev.conf
ai/: .dockerignore  Dockerfile  ai_service.py  hipblas_bridge.c  hipblas_v2_shim.c  requirements.txt
android_app/: .gitignore  build-release.sh  build.gradle  generate_native_remote_gallery.sh  gradle.properties  settings.gradle
android_app/app/: build.gradle
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/assets/: offline.html
android_app/app/src/main/res/drawable/: ic_broken_image.xml  ic_chevron_left.xml  ic_compare.xml  ic_delete.xml  ic_filter.xml  ic_image_placeholder.xml  ic_launcher_foreground.xml  ic_lightning.xml  ic_star_outline.xml
android_app/app/src/main/res/layout/: activity_image_preview.xml  activity_login.xml  activity_main.xml  activity_remote_media_detail.xml  activity_web_gallery.xml  dialog_backup_progress.xml  fragment_filter_bottom_sheet.xml  fragment_local_media.xml  fragment_media_info.xml  fragment_remote_media.xml  fragment_remote_media_native.xml  item_date_header.xml  item_exif_pair.xml  item_exif_raw_toggle.xml  item_image.xml  item_local_media.xml  item_remote_media.xml  tab_description.xml  tab_details.xml  tab_exif.xml  tab_labels.xml
android_app/app/src/main/res/menu/: main_menu.xml  web_gallery_menu.xml
android_app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
client/: Dockerfile  generate-ssl-certs.sh  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx  telemetry.ts
client/src/api/: axiosConfig.ts
client/src/components/: AndroidConnectionQR.tsx  Dashboard.tsx  DirectoryImportModal.tsx  DuplicatesBrowser.tsx  DuplicatesLightbox.tsx  Layout.tsx  LoginForm.tsx  MediaBrowser.tsx  MediaLightbox.tsx  People.tsx  PersonDetail.tsx  PersonGallery.tsx  PresentationMode.tsx  ServerImportModal.tsx  TrashBrowser.tsx  UserManagement.tsx
client/src/stores/: AuthStore.ts  DuplicatesStore.ts  LabelStore.ts  MediaStore.ts  PersonStore.ts  RootStore.ts  StatsStore.ts  TrashStore.ts  UIStore.ts
client/src/stubs/: otel-node-stub.ts
client/src/types/: html.d.ts
coordinator/: Cargo.toml
coordinator/src/: main.rs
db/: init.sql
db/migrations/: 001_fix_partial_indexes_deleted_at.sql  002_add_duplicate_pairs.sql  003_add_orientation_column.sql  004_multi_tenancy.sql  005_add_segmented_sharding.sql  006_backfill_orientation.sql
docker/: Dockerfile.p2p  Dockerfile.postgres  docker-compose-build.yml  docker-compose-dev.yml  docker-compose-netbird.yml  docker-compose-observability.yml
docs/: architecture.md  database.md  deployment.md  p2p-backup.md
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: auth.spec.ts  dashboard.spec.ts  duplicates.spec.ts  global.setup.ts  media.spec.ts  navigation.spec.ts  people.spec.ts  trash.spec.ts
geodb_builder/: Dockerfile.builder  Dockerfile.final  Dockerfile.patch  build.sh  entrypoint.sh  geodb-entrypoint.sh  optimize.sql  process_osm.lua
netbird/: .env.example  .gitignore  README.md  manage.sh
nginx/: generate-ssl-certs-fullstack.sh  nginx-dev.conf  nginx-fullstack.conf
np2p/: Cargo.toml  DESIGN.md
np2p-mobile/: Cargo.toml  build.rs
np2p-mobile/src/: lib.rs
np2p/src/: error.rs  lib.rs
np2p/src/crypto/: identity.rs  mod.rs
np2p/src/network/: channel.rs  coordinator.rs  discovery.rs  handler.rs  mod.rs  p2p_service.rs  peer_registry.rs  protocol.rs  transport.rs  tunnel.rs  utils.rs
np2p/src/storage/: disk.rs  encryption.rs  erasure.rs  mod.rs
np2p/tests/: e2e_storage.rs  test_peer_registry.rs  test_protocol.rs
observability/: alert-rules.yml  alertmanager.yaml  blackbox.yaml  grafana-datasources.yaml  loki.yaml  prometheus.yaml  promtail.yaml  rocm_exporter.py  tempo.yaml
observability/alloy/: config.alloy
observability/dashboards/: application-overview.json  database-metrics.json  http-metrics.json  logs.json  p2p-metrics.json  processing-pipeline.json  system-metrics.json
scripts/: backfill_created_at.py  backfill_exif.py  backfill_file_size.py  backfill_quality.py  generate_install.sh  install-with-observability.sh  install.sh
src/: ai_worker.rs  auth_utils.rs  config.rs  constants.rs  db.rs  db_instrumentation.rs  duplicate_worker.rs  geo_utils.rs  lib.rs  main.rs  media_replication_worker.rs  media_utils.rs  metrics.rs  metrics_collector.rs  p2p_audit_worker.rs  p2p_restore.rs  query_builder.rs  shard_rebalance_worker.rs  system_utils.rs  telemetry.rs  test_utils.rs  utils.rs  verification_worker.rs
src/services/: ai_settings.rs  auth.rs  duplicates.rs  embedding.rs  existence_check.rs  face_detection.rs  geocoding.rs  geodb_stats.rs  health.rs  import_dir.rs  ingest.rs  label.rs  media.rs  p2p_ingest.rs  p2p_restore.rs  p2p_status.rs  person.rs  pool_stats.rs  proxy_manager.rs  quality.rs  stats.rs  system_stats.rs  text_search.rs  thumbnail.rs  upload.rs  user_management.rs
tests/: ai_integration_test.rs  ai_settings_test.rs  ai_speed_test.rs  android_coverage_test.rs  auth_test.rs  batch_check_test.rs  common.rs  cross_device_deduplication_test.rs  e2e_streaming_proxy.sh  existence_check_test.rs  gps_parsing_test.rs  health_test.rs  image_upload_test.rs  import_dir_test.rs  label_test.rs  lib_test.rs  media_replication_worker_test.rs  media_retrieval_test.rs  multipart_builder.rs  p2p_audit_worker_test.rs  p2p_restore_test.rs  repro_batch_check.rs  shard_rebalance_worker_test.rs  soft_delete_test.rs  star_test.rs  stats_test.rs  thumbnail_test.rs  upload_metadata_test.rs  user_isolation_test.rs  user_management_test.rs  utils.rs  video_upload_test.rs
(+52 files in other folders)
