[package]
name = "reminisce"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".", "np2p", "coordinator",
]

[lib]
name = "reminisce"
path = "src/lib.rs"

[[bin]]
name = "reminisce"
path = "src/main.rs"

[[bin]]
name = "p2p_restore"
path = "src/bin/p2p_restore.rs"

[dependencies]
actix-web = { version = "4", features = ["rustls-0_21"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
jsonwebtoken = "8"
deadpool-postgres = "0.10"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-0_8"] }
pgvector = { version = "0.4", features = ["postgres"] }
actix-multipart = "0.6"
actix-cors = "0.6"
kamadak-exif = { version = "0.6.1", package = "kamadak-exif" }
futures-util = "0.3"
async-trait = "0.1"
bincode = "1.3"
image = { version = "0.24", features = ["jpeg"] }
resvg = "0.47"
mime_guess = "2.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
once_cell = "1.18"
uuid = { version = "0.8", features = ["v4", "serde"] }
actix-files = "0.6"
sysinfo = "0.28"
sha2 = "0.10"
reqwest = { version = "0.11", features = ["multipart", "json", "stream", "rustls-tls"], default-features = false }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
tokio-stream = { version = "0.1", features = ["net"] }
utoipa = { version = "4.2.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
base64 = "0.21"
futures = "0.3"

# Password hashing and validation
argon2 = "0.5"
validator = { version = "0.16", features = ["derive"] }

# P2P and NAT traversal
np2p = { path = "np2p" }
get_if_addrs = "0.5"

# Encryption
chacha20poly1305 = "0.10"
reed-solomon-erasure = "6.0"
bytes = "1.5"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4"
clap = { version = "4", features = ["derive"] }
rustls = { version = "0.23.35", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.10.1"
pbkdf2 = "0.12.2"
hmac = "0.12.1"
hkdf = "0.12"
blake3 = "1.5"
url = "2.5"

# Tracing & Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["grpc-tonic", "tokio"] }
tracing-opentelemetry = "0.22"
actix-web-prom = "0.6" # Prometheus middleware
opentelemetry-prometheus = "0.14"
prometheus = { version = "0.13", features = ["process"] }
anyhow = "1.0.100"
rand_chacha = "0.9"
thiserror = "1.0"

# Optimize deps in dev builds (faster runtime, same compile time for our code)
[profile.dev.package."*"]
opt-level = 2

[dev-dependencies]
serial_test = "2.0.0"
futures = "0.3"
filetime = "0.2"

[[test]]
name = "auth_test"
path = "tests/auth_test.rs"

[[test]]
name = "image_upload_test"
path = "tests/image_upload_test.rs"

[[test]]
name = "video_upload_test"
path = "tests/video_upload_test.rs"

[[test]]
name = "existence_check_test"
path = "tests/existence_check_test.rs"

[[test]]
name = "media_retrieval_test"
path = "tests/media_retrieval_test.rs"

[[test]]
name = "thumbnail_test"
path = "tests/thumbnail_test.rs"

[[test]]
name = "upload_metadata_test"
path = "tests/upload_metadata_test.rs"

[[test]]
name = "cross_device_deduplication_test"
path = "tests/cross_device_deduplication_test.rs"

[[test]]
name = "star_test"
path = "tests/star_test.rs"

[[test]]
name = "import_dir_test"
path = "tests/import_dir_test.rs"

[[test]]
name = "ai_speed_test"
path = "tests/ai_speed_test.rs"

[[test]]
name = "p2p_restore_test"
path = "tests/p2p_restore_test.rs"

[[test]]
name = "media_replication_worker_test"
path = "tests/media_replication_worker_test.rs"

[[test]]
name = "p2p_audit_worker_test"
path = "tests/p2p_audit_worker_test.rs"

[[test]]
name = "shard_rebalance_worker_test"
path = "tests/shard_rebalance_worker_test.rs"
