[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "coordinator"
path = "src/main.rs"

[dependencies]
np2p = { path = "../np2p" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
rand = "0.8"
anyhow = "1.0"
rustls = { version = "0.23", features = ["ring", "std"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
quinn = { version = "0.11", default-features = false, features = ["rustls", "runtime-tokio"] }
