[package]
name = "np2p-mobile"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "np2p_mobile"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["uniffi/cli"]

[dependencies]
np2p = { path = "../np2p" }
uniffi = { version = "0.28", features = ["cli", "tokio"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.18"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-android = "0.2"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
thiserror = "1.0"
quinn = { version = "0.11", default-features = false, features = ["rustls", "runtime-tokio"] }
rustls = { version = "0.23", features = ["ring", "std"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
