[package]
name = "np2p"
version = "0.1.0"
edition = "2021"

[lib]
name = "np2p"
path = "src/lib.rs"

[[bin]]
name = "np2pd"
path = "src/bin/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Transport (QUIC)
quinn = { version = "0.11", default-features = false, features = ["rustls", "runtime-tokio"] }
rustls = { version = "0.23", features = ["ring", "std"] }
rcgen = "0.13"
rustls-pki-types = "1.0"

# Security & Identity
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
chacha20poly1305 = "0.10"
blake3 = "1.5"
rand = "0.8"
hex = "0.4"

# Erasure Coding
reed-solomon-erasure = "6.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
clap = { version = "4.4", features = ["derive"] }
bytes = "1.5"
base64 = "0.21"
get_if_addrs = "0.5"

[dev-dependencies]
tempfile = "3.8"
